Fixed WorkExampleTile shrinking if parent was resized too small.

--- a/src/styles/components/WorkExampleTile.less
+++ b/src/styles/components/WorkExampleTile.less
@@ -3,6 +3,7 @@
     display: inline-block;
     
     box-sizing: content-box;
+    flex: 0 0 auto;
     width: 250px;
     height: 250px;
     margin: 10px;
